--- a/reduce-core/build.gradle
+++ b/reduce-core/build.gradle
@@ -1,12 +1,11 @@
 plugins {
     id 'java-library'
     id 'kotlin'
-//    id 'com.github.dcendents.android-maven'
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 }
 
 group='com.github.genaku.reduce'
