--- a/reduce-ext/build.gradle
+++ b/reduce-ext/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
-//    id 'com.github.dcendents.android-maven'
 }
 
 android {
@@ -23,18 +22,19 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
+    namespace 'com.genaku.reducex'
 }
 
 group='com.github.genaku.reduce'
 
 dependencies {
-//    implementation "com.github.genaku:reduce:0.9.3"
+//    implementation "com.github.genaku:reduce:0.9.9"
     implementation(project(":reduce-core"))
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.1'
