--- a/reduce-ext/build.gradle
+++ b/reduce-ext/build.gradle
@@ -4,8 +4,8 @@ plugins {
 }
 
 android {
-    compileSdkVersion 33
-    buildToolsVersion "33.0.0"
+    compileSdk 33
+    buildToolsVersion = "33.0.1"
 
     defaultConfig {
         minSdkVersion 19
@@ -37,6 +37,6 @@ dependencies {
 //    implementation "com.github.genaku:reduce:0.9.9"
     implementation(project(":reduce-core"))
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.2'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
 }
